* testsuite-checking/expected-results-s390-linux-gnu-s390,     testsuite-checking/expected-results-s390x-linux-gnu-libc: cleanup.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5825

--- a/debian/changelog
+++ b/debian/changelog
@@ -143,6 +143,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/any/cvs-CVE-2013-4458-getaddrinfo.diff: new patch from upstream
     to fix stack (frame) overflow in getaddrinfo() when called with AF_INET6
     / CVE-2013-4458 (Closes: #727181).
+  * testsuite-checking/expected-results-s390-linux-gnu-s390,
+    testsuite-checking/expected-results-s390x-linux-gnu-libc: cleanup.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
