debian/rules: Build for i586 where dpkg-architecture claims i486, which matches the default that gcc-4.8 has had on i386 for the last two years.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5827

--- a/debian/changelog
+++ b/debian/changelog
@@ -81,6 +81,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/patches/arm64/cvs-arm64-ifunc.diff: Enable arm64 IFUNC support.
   * debian/{control.in/main,rules,sysdeps/*}: Switch to using gcc-4.8 on all
     architectures as gcc-4.6 and gcc-4.7 are going away in the near future.
+  * debian/rules: Build for i586 where dpkg-architecture claims i486, which
+    matches the default that gcc-4.8 has had on i386 for the last two years.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
