* patches/svn-updates.diff: update with the glibc 2.18 branch to get commits     which are not yet available in eglibc. Fixes multiarch math functions on     sparc.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5831

--- a/debian/changelog
+++ b/debian/changelog
@@ -147,6 +147,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     / CVE-2013-4458 (Closes: #727181).
   * testsuite-checking/expected-results-s390-linux-gnu-s390,
     testsuite-checking/expected-results-s390x-linux-gnu-libc: cleanup.
+  * patches/svn-updates.diff: update with the glibc 2.18 branch to get commits
+    which are not yet available in eglibc. Fixes multiarch math functions on
+    sparc.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
