* testsuite-checking/expected-results-i486*: rename expected result files     from i486 to i586.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5835

--- a/debian/changelog
+++ b/debian/changelog
@@ -150,6 +150,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/svn-updates.diff: update with the glibc 2.18 branch to get commits
     which are not yet available in eglibc. Fixes multiarch math functions on
     sparc.
+  * testsuite-checking/expected-results-i486*: rename expected result files
+    from i486 to i586.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
