--- a/debian/changelog
+++ b/debian/changelog
@@ -152,6 +152,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     sparc.
   * testsuite-checking/expected-results-i486*: rename expected result files
     from i486 to i586.
+  * testsuite-checking/convertlog.sh: use sort -u to avoid duplicated entries
+    in the test results.
+  * testsuite-checking/expected-results-mips*: remove duplicated entries.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
