--- a/debian/changelog
+++ b/debian/changelog
@@ -154,7 +154,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     from i486 to i586.
   * testsuite-checking/convertlog.sh: use sort -u to avoid duplicated entries
     in the test results.
-  * testsuite-checking/expected-results-mips*: remove duplicated entries.
+  * testsuite-checking/expected-results-mips*: remove duplicated entries,
+    cleanup.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
