--- a/debian/changelog
+++ b/debian/changelog
@@ -156,6 +156,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     in the test results.
   * testsuite-checking/expected-results-mips*: remove duplicated entries,
     cleanup.
+  * testsuite-checking/expected-results-arm-linux-gnueabihf-libc: cleanup.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
