--- a/debian/changelog
+++ b/debian/changelog
@@ -157,6 +157,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-mips*: remove duplicated entries,
     cleanup.
   * testsuite-checking/expected-results-arm-linux-gnueabihf-libc: cleanup.
+  * testsuite-checking/expected-results-arm-linux-gnueabi-libc: cleanup.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
