--- a/debian/changelog
+++ b/debian/changelog
@@ -158,6 +158,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     cleanup.
   * testsuite-checking/expected-results-arm-linux-gnueabihf-libc: cleanup.
   * testsuite-checking/expected-results-arm-linux-gnueabi-libc: cleanup.
+  * testsuite-checking/expected-results-*86-linux-gnu*: cleanup.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
