--- a/debian/changelog
+++ b/debian/changelog
@@ -159,6 +159,10 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-arm-linux-gnueabihf-libc: cleanup.
   * testsuite-checking/expected-results-arm-linux-gnueabi-libc: cleanup.
   * testsuite-checking/expected-results-*86-linux-gnu*: cleanup.
+  * patches/any/cvs-DL_CALL_DT_INIT_FINI.diff, 
+    patches/hppa/cvs-hppa-DL_CALL_DT_INIT_FINI.diff,
+    patches/ia64/cvs-ia64-DL_CALL_DT_INIT_FINI.diff: new patches from upstream
+    to fix a segmentation fault in ld.so on hppa and ia64.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
