--- a/debian/changelog
+++ b/debian/changelog
@@ -163,6 +163,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     patches/hppa/cvs-hppa-DL_CALL_DT_INIT_FINI.diff,
     patches/ia64/cvs-ia64-DL_CALL_DT_INIT_FINI.diff: new patches from upstream
     to fix a segmentation fault in ld.so on hppa and ia64.
+  * testsuite-checking/expected-results-sparc*-linux-gnu-*: cleanup.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
