patches/s390/cvs-s390-tls-got-pointer.diff: new patch from upstream to fix the TLS GOT pointer setup on s390.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5843

--- a/debian/changelog
+++ b/debian/changelog
@@ -164,6 +164,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     patches/ia64/cvs-ia64-DL_CALL_DT_INIT_FINI.diff: new patches from upstream
     to fix a segmentation fault in ld.so on hppa and ia64.
   * testsuite-checking/expected-results-sparc*-linux-gnu-*: cleanup.
+  * patches/s390/cvs-s390-tls-got-pointer.diff: new patch from upstream to fix
+    the TLS GOT pointer setup on s390.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
