--- a/debian/changelog
+++ b/debian/changelog
@@ -83,6 +83,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     architectures as gcc-4.6 and gcc-4.7 are going away in the near future.
   * debian/rules: Build for i586 where dpkg-architecture claims i486, which
     matches the default that gcc-4.8 has had on i386 for the last two years.
+  * debian/rules: Set configure_build the same as configure_target above, so
+    we don't think we're cross-building and skip half the testsuite on i386.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
