debian/patches/i386/local-i586-ulps.diff: Regen ulps for i586, not i686.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5846

--- a/debian/changelog
+++ b/debian/changelog
@@ -85,6 +85,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     matches the default that gcc-4.8 has had on i386 for the last two years.
   * debian/rules: Set configure_build the same as configure_target above, so
     we don't think we're cross-building and skip half the testsuite on i386.
+  * debian/patches/i386/local-i586-ulps.diff: Regen ulps for i586, not i686.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
