* debian/rules.d/build.mk: define the installation in configparms to avoid     broken glibc makefiles to spuriously trigger install rules trying to     overwrite system headers.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5848

--- a/debian/changelog
+++ b/debian/changelog
@@ -169,6 +169,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-sparc*-linux-gnu-*: cleanup.
   * patches/s390/cvs-s390-tls-got-pointer.diff: new patch from upstream to fix
     the TLS GOT pointer setup on s390.
+  * debian/rules.d/build.mk: define the installation in configparms to avoid
+    broken glibc makefiles to spuriously trigger install rules trying to
+    overwrite system headers.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
