* testsuite-checking/expected-results-*-kfreebsd-gnu-*: allow     check-local-headers.out to fail as the script is linux specific and     doesn't now about kfreebsd specific headers.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5849

--- a/debian/changelog
+++ b/debian/changelog
@@ -172,6 +172,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/rules.d/build.mk: define the installation in configparms to avoid
     broken glibc makefiles to spuriously trigger install rules trying to
     overwrite system headers.
+  * testsuite-checking/expected-results-*-kfreebsd-gnu-*: allow
+    check-local-headers.out to fail as the script is linux specific and
+    doesn't now about kfreebsd specific headers.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
