* debian/rules: don't pass -fstrict-aliasing to HOST_CFLAGS, it is already     included in -O2.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5851

--- a/debian/changelog
+++ b/debian/changelog
@@ -175,6 +175,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-*-kfreebsd-gnu-*: allow
     check-local-headers.out to fail as the script is linux specific and
     doesn't now about kfreebsd specific headers.
+  * debian/rules: don't pass -fstrict-aliasing to HOST_CFLAGS, it is already
+    included in -O2.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
