Replace patches/any/submitted-findlocale-div-by-zero.diff by upstream version patches/any/cvs-findlocale-div-by-zero.diff.
(and fix a merge issue at the same time)


svn path=/glibc-package/branches/eglibc-2.18/; revision=5852

--- a/debian/changelog
+++ b/debian/changelog
@@ -177,6 +177,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     doesn't now about kfreebsd specific headers.
   * debian/rules: don't pass -fstrict-aliasing to HOST_CFLAGS, it is already
     included in -O2.
+  * Replace patches/any/submitted-findlocale-div-by-zero.diff by upstream
+    version patches/any/cvs-findlocale-div-by-zero.diff.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
